# single-agent-wsi

./: README.md
create_wsi_kl_s/: README.md  pyproject.toml  training_data.pkl  wsi_cancer_description.md
create_wsi_kl_s/knowledge/: cancer_descriptions.json
create_wsi_kl_s/src/create_wsi_kl_s/: __init__.py  crew.py  init_llm.py  main.py
create_wsi_kl_s/src/create_wsi_kl_s/config/: agents.yaml  tasks.yaml
